hopefully helped scrolling issue on mobile booking

--- a/src/Styling/App.scss
+++ b/src/Styling/App.scss
@@ -65,6 +65,13 @@ a.nav-link {
   #actionTabIcon {
     display: inline;
   }
+  .bg#booking{
+    padding: 30px 6px;
+  }
+  .actionTabWrapper {
+    padding-left: 20px;
+    padding-right: 40px;
+  }
   #specialitiesText{
     flex-direction: column;
   }
